--- a/src/App.css
+++ b/src/App.css
@@ -67,3 +67,17 @@
 
 
 /* logo */
+
+
+/* Api calling css */
+
+
+.anchor{
+  text-decoration: none;
+  color: rgb(17, 16, 16);
+}
+
+.heading {
+  border-radius: 20px 0px 20px;
+}
+
